Preserve nullable bounty no-op replay fields